--- a/lab1/css/jobaid.css
+++ b/lab1/css/jobaid.css
@@ -37,6 +37,7 @@ body {
 	background-color: #CF3339;
 	color:white;
 	text-shadow: 2px 2px 4px #000000;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }
 
 .stepContent{ 
@@ -48,6 +49,7 @@ body {
 	padding-bottom:30px;
 	display: flex;
 	justify-content: center;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .stepDescription {
