--- a/lab6/css/page5astyles.css
+++ b/lab6/css/page5astyles.css
@@ -147,20 +147,20 @@ body {
 }
 
 .stepDescription1 {
-	width:20%;
-	padding-left: 5px;
+	width:95%;
+	padding-left: 50px;
 	padding-top: 5px;
 	padding-bottom: 5px;
-	padding-right: 60px;
-	text-align:left;
+	padding-right: 50px;
+	text-align:center;
 }
 
 .stepImage {
-	width:65%;	
-	padding-right:20px;
+	width:95%;	
+	padding:0px;
 	text-align:center;
 	border-radius:5px;
-	box-shadow: 0px 4px 10px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .warning {
@@ -244,6 +244,9 @@ body {
 	display:none;
 }
 
+.ihotspot{
+	
+}
 
 .choices {
 cursor: pointer;
